[package]
name = "ao3-client"
version = "0.1.0"
edition = "2021"
authors = ["Washi"]
description = "A client for interfacing with the AO3 (Archive of Our Own) website/data."
license-file = "LICENSE.txt"
repository = "https://github.com/Washiil/ao3-client"
readme = "README.md"


[dependencies]
lazy_static = "1.5.0"
reqwest = "0.12.7"
scraper = "0.20.0"
thiserror = "1.0.63"

[dev-dependencies]
tokio = {version = "1.40.0", features = ["full"]}
